--- a/css/EducacionInteractiva.css
+++ b/css/EducacionInteractiva.css
@@ -165,7 +165,7 @@
 	***********************************/
 	
 	/***********************************
-	Solo para la interfaz de creación de modulos { */
+	Solo para la interfaz de creaciï¿½n de modulos { */
 	
 	/* Oculta los text area donde esta el codigo */
 	textarea.cTextAreaCrearObjetos_LugarDelCodigoJS_ESt[invisible]
@@ -173,7 +173,7 @@
 		display: none;
 	}
 	
-	/* } Solo para la interfaz de creación de modulos
+	/* } Solo para la interfaz de creaciï¿½n de modulos
 	***********************************/
 	
 	/***********************************
